Переход на Java 8