@@ -13,6 +13,7 @@ import java.util.Map;
 import java.util.concurrent.Exchanger;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
+import java.util.stream.Collectors;
 
 import javax.swing.JPanel;
 import javax.swing.JButton;
@@ -197,7 +198,7 @@ public class InfoPanel extends BasePanel {
                                 System.out.println(button.getText());
                                 if (button.getText().equals(hexButton.getText())) {
                                     try {
-                                        SEARCH_BY_HEX_Exchanger.exchange(Arrays.stream(search.getText().split("[\\t\\s\\W+]")).toList(), 1500, TimeUnit.MILLISECONDS);
+                                        SEARCH_BY_HEX_Exchanger.exchange(Arrays.stream(search.getText().split("[\\t\\s\\W+]")).collect(Collectors.toList()), 1500, TimeUnit.MILLISECONDS);
                                     } catch (InterruptedException | TimeoutException e) {}
                                     
                                 }     
